src/sass/components/_pre.scss
%base--pre-build {
  direction: ltr;
  display: block;
  font-family: $font-mono;
  font-weight: normal;
  hyphens: none;
  letter-spacing: normal;
  overflow-y: overlay;
  tab-size: 2;
  text-align: left;
  white-space: pre-wrap;
  word-break: break-all;
  word-spacing: normal;
  word-wrap: break-word;
}

%base--pre {
  @extend %base--pre-build;
  border-radius: 3px;
  overflow: auto;

  code,
  .base--code {
    @extend %base--pre-build;
    line-height: 1.45;
    outline: 0;
    padding: 1rem;
    white-space: pre;
  }
}

pre {
  @extend %base--pre;
  background: var(--grey-900);

  > code {
    color: var(--grey-50);
  }
}

.token.prolog,
.token.doctype,
.token.cdata,
.token.punctuation {
  color: var(--grey-50);
}

.token.comment {
  color: var(--grey-500);
}

.token.tag,
.token.constant,
.token.symbol,
.token.deleted,
.token.keyword,
.token.important {
  color: var(--cyan-400);
}

.token.boolean,
.token.number {
  color: var(--green-300);
}

.token.selector,
.token.attr-name,
.token.char,
.token.builtin,
.token.inserted,
.token.function {
  color: var(--purple-200);
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string,
.token.variable {
  color: var(--pink-500);
}

.token.atrule,
.token.string,
.token.attr-value {
  color: var(--yellow-200);
}

.token.property {
  color: var(--cyan-400);
}

.token.regex {
  color: var(--orange-300);
}

.token.italic {
  font-style: italic;
}

.token.entity {
  cursor: help;
}

